--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <head>
     <link rel="stylesheet" href="milligram.css">
     <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
 
 <div class="container">
-
-<!--    <video autoplay="" loop="" playsinline=""><source src="https://ipfs.atomichub.io/ipfs/QmeTK7t2JHUuXVGQh3TX5dUXh7dNUg1JoT7BYd83ZoQcb5/Front/Epic/FUNKO.HALLOWEEN.FREDDY.MUMMY.POP-GHOST-EPIC.mp4"></video>-->
-
     <h2>NFT Watchlist</h2>
     <table>
         <thead>
@@ -38,6 +36,9 @@
 
 </div>
 
+<script src="include.js"></script>
+<script src="settings.js"></script>
 <script src="script.js"></script>
+
 </body>
 </html>
