Cleanup of styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
     <link rel="stylesheet" href="milligram.css">
     <link rel="stylesheet" href="index.css">
-
 </head>
 <body>
 
@@ -23,17 +22,13 @@
 
         </tbody>
     </table>
-
-
-    <br/>
+    <button id="refreshTableButton">Refresh</button>
+    <br/><br/>
     <div>
-        <button id="refreshTableButton">Refresh</button>
-    </div>
-
-    <br/>
-
-    <div id="timestamp"></div>
-
+        WAX = $<span id="waxPrice"></span>
+        &nbsp;&nbsp;|&nbsp;&nbsp;
+        <span id="timestamp"></span>
+    </div> 
 </div>
 
 <script src="include.js"></script>
