--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>NFT Watchlist</title>
+    <title>Floor Price Watchlist</title>
     <link rel="stylesheet" href="milligram.css">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -11,13 +11,11 @@
     <div class="container">
         <div class="row header">
             <div class="column">
-                <h1>NFT Watchlist</h1>
+                <h1>Floor Price Watchlist</h1>
             </div>
             <div class="column">
-                <!-- <img class="float-right" style="height: 5em;" src="https://images.squarespace-cdn.com/content/v1/60a371d1411b97685077e895/1621325641828-UT4QLOCRE0AJUGSJSRPN/AKlogo23D.png"/> -->
                 <a href="https://atomikings.com" target="_blank" class="logoLink float-right">
-                    <img style="height: 5em;"
-                        src="https://images.squarespace-cdn.com/content/v1/60a371d1411b97685077e895/1621363944622-Q6J56U0TVH53KQY3M54S/AKlogobanner.png" />
+                    <img style="height: 5em;" src="AKlogobanner.png" />
                 </a>
             </div>
         </div>
@@ -58,7 +56,9 @@
             <div class="column">
                 WAX = $<span id="waxPrice"></span>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                <span id="timestamp"></span>
+                Updated <span id="timestamp"></span> 
+                &nbsp;&nbsp;|&nbsp;&nbsp;
+                Updates every 5 minutes
             </div>
         </div>
     </div>
