Nesting some assets

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Floor Price Watchlist</title>
-    <link rel="stylesheet" href="milligram.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/milligram.min.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
             </div>
             <div class="column">
                 <a href="https://atomikings.com" target="_blank" class="logoLink float-right">
-                    <img style="height: 5em;" src="AKlogobanner.png" />
+                    <img style="height: 5em;" src="img/AKlogobanner.png" />
                 </a>
             </div>
         </div>
@@ -63,9 +63,9 @@
         </div>
     </div>
 
-    <script src="include.js"></script>
-    <script src="settings.js"></script>
-    <script src="script.js"></script>
+    <script src="js/include.js"></script>
+    <script src="js/settings.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
