Converts to ES6 modules and adds eslint

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                             <td title="template Id">ID</td>
                             <td>Collection</td>
                             <td>Name</td>
-                            <td title="price of lowest priced sales listing">Floor Price</td>
-                            <td title="percentage difference between last sold WAX price and floor WAX price">Gap</td>
+                            <td style="text-align:right" title="price of lowest priced sales listing">Floor Price</td>
+                            <td style="text-align:right" title="percentage difference between last sold WAX price and floor WAX price">Gap</td>
                             <td title="elapsed time since last sale">Lag</td>
-                            <td>USD</td>
+                            <td style="text-align:right">USD</td>
                             <td></td>
                         </tr>
                     </thead>
@@ -68,9 +68,11 @@
         </div>
     </div>
 
-    <script src="js/include.js"></script>
-    <script src="js/settings.js"></script>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/config.js"></script>
+    <script type="module" src="js/settings.js"></script>
+    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/storage.js"></script>
+    <script type="module" src="js/util.js"></script>
 
 </body>
 
