Add share button and googly eyes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="container">
         <div class="row header">
             <div class="column">
-                <h1>Floor Price Watchlist</h1>
+                <h1 class="float-left">Fl</h1>
+                <img class="float-left logo" src="/img/NicePng_googly-eyes-png_24220.png"/>
+                <h1 class="float-left">r Price Watchlist</h1>
+
             </div>
             <div class="column">
                 <a href="https://atomikings.com" target="_blank" class="logoLink float-right">
@@ -53,6 +56,7 @@
                 <span id="refreshStatus"></span>
             </div>
             <div class="column buttons-right">
+              <button id="shareButton" title="Generate sharable link of this current view">Share</button>
               <button id="setWalletButton">...</button>
               <button id="setTemplateIDsButton">...</button>
             </div>
