--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     <script type="module" src="js/script.js"></script>
     <script type="module" src="js/storage.js"></script>
     <script type="module" src="js/util.js"></script>
+    <script type="module" src="js/data.js"></script>
+    <script type="module" src="js/display.js"></script>
 
 </body>
 
