Override refresh_interval via QueryString

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 &nbsp;&nbsp;|&nbsp;&nbsp;
                 Updated <span id="timestamp"></span> 
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                Updates every 5 minutes
+                Updates every <span id="refresh-interval"></span> minutes
             </div>
         </div>
     </div>
