Show spinners instead of status text to display load progress.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/solid.min.css">
 </head>
 
-<body>
+<body class="fade-in">
     <div class="container">
         <div class="row header">
             <div class="column">
@@ -66,7 +66,7 @@
             <div class="column">
                 WAX = $<span id="waxPrice"></span>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                Updated <span id="timestamp"></span> 
+                Updated <span id="timestamp"></span>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
                 Updates every <span id="refresh-interval"></span> minutes
             </div>
