--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <title>Floor Price Watchlist</title>
+  <link rel="icon" href="/img/favicon.ico" sizes="any">
+  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png"/>
+  <link rel="manifest" href="/site.webmanifest" />
+
   <link rel="stylesheet" href="css/milligram.min.css">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/sortable.css">
@@ -30,7 +34,7 @@
   </div>
   <div id="results" class="row hidden">
     <div class="column">
-      <table class="sortable table-sort" id="main-table">
+      <table class="sortable" id="main-table">
         <thead>
         <tr>
           <th title="template Id">ID</th>
