Show column sort at start

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <table class="sortable" id="main-table">
         <thead>
         <tr>
-          <th title="template Id">ID</th>
+          <th title="template Id" class="dir-u">ID</th>
           <th>Collection</th>
           <th>Name</th>
           <th class="text-right" title="price of lowest priced sales listing">Floor Price</th>
