--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Floor Price Watchlist</title>
-  <link rel="icon" href="/img/favicon.ico" sizes="any">
+  <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="/img/apple-touch-icon.png"/>
   <link rel="manifest" href="/site.webmanifest" />
 
