Update rows more frequently if low lag

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <script type="module" src="js/util.js"></script>
 <script type="module" src="js/data.js"></script>
 <script type="module" src="js/display.js"></script>
+<script type="module" src="js/semaphore.js"></script>
 <script type="application/javascript" src="js/sortable.js"></script>
 
 </body>
