--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       Updated <span id="timestamp"></span>
       &nbsp;&nbsp;|&nbsp;&nbsp;
       Updates every <span id="refresh-interval"></span> minutes
+      <div class="float-right">WAX Donations: <span class="donation-address">mo.xy</span></div>
     </div>
   </div>
 </div>
