Default sort by lag

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       <table class="sortable" id="main-table">
         <thead>
         <tr>
-          <th title="template Id" class="dir-u">ID</th>
+          <th title="template Id">ID</th>
           <th>Collection</th>
           <th>Name</th>
           <th class="text-right" title="price of lowest priced sales listing">Floor Price</th>
           <th class="text-right" title="percentage difference between last sold WAX price and floor WAX price">Gap</th>
-          <th title="elapsed time since last sale">Lag</th>
+          <th class="dir-u" title="elapsed time since last sale" >Lag</th>
           <th class="no-sort text-right">USD</th>
           <th class="no-sort"></th>
         </tr>
@@ -82,7 +82,7 @@
 <script type="module" src="js/data.js"></script>
 <script type="module" src="js/view.js"></script>
 <script type="module" src="js/semaphore.js"></script>
-<script type="application/javascript" src="js/sortable.js"></script>
+<script type="module" src="js/sortable.js"></script>
 
 </body>
 </html>
