Let's use TypeScript

--- a/index.html
+++ b/index.html
@@ -74,15 +74,17 @@
   </div>
 </div>
 
+<script type="module" src="js/types.js"></script>
 <script type="module" src="js/config.js"></script>
 <script type="module" src="js/settings.js"></script>
-<script type="module" src="js/script.js"></script>
 <script type="module" src="js/storage.js"></script>
 <script type="module" src="js/util.js"></script>
 <script type="module" src="js/data.js"></script>
 <script type="module" src="js/view.js"></script>
-<script type="module" src="js/semaphore.js"></script>
-<script type="module" src="js/sortable.js"></script>
+<script type="module" src="js/vendor/semaphore.js"></script>
+<script type="module" src="js/vendor/sortable.js"></script>
+<script type="module" src="js/script.js"></script>
+
 
 </body>
 </html>
