--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 <script type="module" src="js/vendor/sortable.js"></script>
 <script type="module" src="js/script.js"></script>
 
-
+<script async src="//static.getclicky.com/101344235.js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101344235ns.gif" /></p></noscript>
 </body>
 </html>
