Change emoji logo graphic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
   <div class="row header">
     <div class="column">
-      <h1 class="float-left">&#129488; Fl</h1>
+      <h1 class="float-left"><img class="emoji-logo" src="/img/android-chrome-192x192.png"/>Fl</h1>
       <img class="float-left logo" src="/img/NicePng_googly-eyes-png_24220.png"/>
       <h1 class="float-left">r Price Watchlist</h1>
     </div>
