Add rarity column and show schema name for assetname when asset is 1/1

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <tr>
           <th title="template Id">ID</th>
           <th>Collection</th>
+          <th>Rarity</th>
           <th>Name</th>
-          <th class="text-right" title="price of lowest priced sales listing">Floor Price</th>
+          <th class="text-right" title="price of lowest priced sales listing">Floor</th>
           <th class="text-right" title="percentage difference between last sold WAX price and floor WAX price">Gap</th>
           <th class="dir-u" title="elapsed time since last sale" >Lag</th>
           <th class="no-sort text-right">USD</th>
