Be gentler on AtomicHub api

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       &nbsp;&nbsp;|&nbsp;&nbsp;
       Updated <span id="timestamp"></span>
       &nbsp;&nbsp;|&nbsp;&nbsp;
-      Updates every <span id="refresh-interval"></span> minutes
+      Updates automatically based on lag time
       <div class="float-right">WAX Donations: <span class="donation-address">mo.xy</span></div>
     </div>
   </div>
