Enable presets for settings

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <span id="refreshStatus"></span>
     </div>
     <div class="column buttons-right">
+      <select id="presetSelect"></select>
       <button id="shareButton" title="Generate sharable link of this current view">Share</button>
       <button id="setWalletButton">...</button>
       <button id="setTemplateIDsButton">...</button>
@@ -75,6 +76,7 @@
       Updated <span id="timestamp"></span>
       &nbsp;&nbsp;|&nbsp;&nbsp;
       Updates automatically based on lag time
+
       <div class="float-right">WAX Donations: <span class="donation-address">mo.xy</span></div>
     </div>
   </div>
