Preset fixes and expando view

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <th class="text-right" title="percentage difference between last sold WAX price and floor WAX price">Gap</th>
           <th class="dir-u" title="elapsed time since last sale">Lag</th>
           <th class="no-sort text-right">USD</th>
-          <th class="no-sort"><i class="fa-solid fa-maximize" id="expandButton"></i></th>
+          <td class="no-sort"><i class="fa-solid fa-maximize" id="expandButton"></i></td>
         </tr>
         </thead>
         <tbody id="exchangeTable"></tbody>
@@ -64,7 +64,7 @@
       <div class="float-right">WAX Donations: <span class="donation-address">mo.xy</span></div>
     </div>
   </div>
-  <div class="row">
+  <div class="row footer">
     <div class="column">
       <button id="refreshTableButton">Refresh</button>
     </div>
@@ -79,7 +79,8 @@
       </div>
     </div>
   </div>
-</div>
+    </div>
+
 
 <script type="module" src="js/types.js"></script>
 <script type="module" src="js/config.js"></script>
