--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
 <script type="module" src="js/vendor/sortable.js"></script>
 <script type="module" src="js/script.js"></script>
 
-<script async src="//static.getclicky.com/101344235.js"></script>
+<script type="text/javascript">
+  var clicky_custom = clicky_custom || {};
+  clicky_custom.ping_disable = 0;
+  clicky_custom.history_disable = 1;
+  clicky_custom.visitor_consent = 1;
+</script>
+
+<script src="//static.getclicky.com/101344235.js"></script>
 <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101344235ns.gif"/></p></noscript>
 </body>
 </html>
