Fix column visibility between presets

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       &nbsp;&nbsp;|&nbsp;&nbsp;
       Updates automatically based on lag time
       <span id="refreshStatus"></span>
-      <div class="float-right">WAX Donations: <span class="donation-address">mo.xy</span></div>
+      <div class="float-right"><a href="https://t.me/nftgaze" target="_blank">Telegram</a></div>
     </div>
   </div>
   <div class="row footer">
